Changed `list.getFirst()` to `list.get(0)`